// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTALink Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--gray CTA--default"
>
  <smart-link-stub
    class="CTA-link"
    to="cta"
  >
    <div
      class="CTA-icon"
    >
      <img
        alt="cta title icon"
        src="http://google.com"
      />
    </div>
     
    <h6
      class="CTA-title"
    >
      cta title
    </h6>
  </smart-link-stub>
</div>
`;

exports[`CTALink Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--brown CTA--default"
>
  <smart-link-stub
    class="CTA-link"
    to="cta"
  >
    <div
      class="CTA-icon"
    >
      <img
        alt="cta title icon"
        src="http://google.com"
      />
    </div>
     
    <h6
      class="CTA-title"
    >
      cta title
    </h6>
  </smart-link-stub>
</div>
`;
